# entropy-deep-research

./: .gitignore  download_weights.py  entropy_log.txt  inference.py  main.py  observe.py  pyproject.toml  requirements.txt
entropy/: __init__.py  chat.py  inference.py  plot.py
