[project]
name = "entropy-cot"
version = "0.1.0"
description = ""
authors = [
    {name = "Elijah Kurien",email = "elijahkurien05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (==2.5.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
